# solid-node

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  CONTRIBUTING.rst  CREDITS.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflow/: ci.yaml
.github/workflows/: python-app.yml
docs/: Makefile  animation.rst  api-reference.rst  architecture.md  assemblies.rst  backgound.rst  changelog.rst  cli.rst  conf.py  contributing.rst  contributor-briefing.md  embedding.rst  examples.rst  fusion.rst  index.rst  installation.rst  leaf-nodes.rst  make.bat  node-tree.rst  performance-improvement.md  quickstart.rst  requirements.txt  status-and-roadmap.rst  testing.rst  tutorial.rst  usage.rst  using-solid-node.rst  viewer.rst  why-solid-node.rst
docs/adrs/: README.md
examples/: ComplexObject.py
openspec/: config.yaml
scripts/: dev-env
solid_node/: __init__.py  cli.py  exceptions.py  manager.py  math.py  packaging.py  sphinx.py  test.py
solid_node/core/: __init__.py  broker.py  builder.py  export.py  git.py  loader.py  logging.py
tests/: __init__.py  base.py  conftest.py  test_assert_code.py  test_assertions.py  test_broad_phase_culling.py  test_builder_lifecycle.py  test_builder_reload_resilience.py  test_cli.py  test_conrod_symbolic.py  test_decorators.py  test_export.py  test_files.py  test_loader_node_marker.py  test_manager_build.py  test_manager_develop.py  test_manager_new.py  test_manager_test.py  test_manifold_cache.py  test_math.py  test_meta.py  test_node_mesh_cache.py  test_node_naming.py  test_operations.py  test_pid_robustness.py  test_scad_stl.py  test_snapshot.py  test_sphinx_ext.py  test_two_pipes.py  test_uniq_id.py  test_web_viewer.py  test_widget_e2e.py  utils.py
(+247 files in other folders)
